--- a/trunk/TODO
+++ b/trunk/TODO
@@ -1,1 +1,4 @@
-- Write installer :)
+- Make the installer actually install/uninstall the drivers
+- Make the installer check that the user is admin
+- Add some text about distribution being under the terms of the GPL
+- Switch to modern ui
