First cut at the installer.
Hideously ugly first cut at the installer.  Uses the nsis default gui.  Just drops files in the correct location and then removes them on uninstall.  Nothing useful yet.

--- a/TODO
+++ b/TODO
@@ -1,1 +1,4 @@
-- Write installer :)
+- Make the installer actually install/uninstall the drivers
+- Make the installer check that the user is admin
+- Add some text about distribution being under the terms of the GPL
+- Switch to modern ui
