--- a/trunk/README
+++ b/trunk/README
@@ -6,5 +6,6 @@ the guest additions so that VirtualBox OSE users do not have to setup a Windows
 build environment just to get the guest additions working.
 
 The VirtualBox OSE source used to build the binaries in 'additions' can always
-be found in 'src'.  The only tool required to build the installer is NSIS
-(http://nsis.sf.net).
+be found in 'src'.  Graphics in the 'graphics' directory are from the orange
+theme distributed with NSIS.  The only tool required to build the installer is
+NSIS (http://nsis.sf.net).
