--- a/README
+++ b/README
@@ -9,3 +9,7 @@ The VirtualBox OSE source used to build the binaries in 'additions' can always
 be found in 'src'.  Graphics in the 'graphics' directory are from the orange
 theme distributed with NSIS.  The only tool required to build the installer is
 NSIS (http://nsis.sf.net).
+
+setup-processes plugin for NSIS is by Andrei Ciubotaru
+(http://nsis.sourceforge.net/Processes_plug-in) and is subject to its own
+license (see setup-processes/doc/license.rtf).
