--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -27,5 +27,11 @@ Some issues are still open:
 
 Please uninstall any Guest Additions provided by SUN or InnoTek (PUEL/commercial).
 
+== Windows 7 rc ==
+For windows 7 rc, you need to install the graphics driver manually (2.2.2-0).
+Update graphics driver, Search on computer, "C:\Program Files\VirtualBox OSE Guest Additions", VirtualBox graphics driver.
+
+According to the discussion group, some people also had success with using the "compatibility assistant" and installing in Vista mode.
+
 = License =
 GNU General Public License (GPL) v2
