--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -12,6 +12,8 @@ The current packages are:
   * Microsoft Visual C++ 2005 Service Pack 1 Redistributable Package ATL Security Update <br/> July 28th, 2009<br/>http://www.microsoft.com/downloads/details.aspx?familyid=766A6AF7-EC73-40FF-B072-9112BAB119C2
   * Microsoft Visual C++ 2005 SP1 Redistributable Package (x86)<br/> Aug 27th, 2007<br/>http://www.microsoft.com/downloads/details.aspx?familyid=200B2FD9-AE1A-4A14-984D-389C36F85647
 
+Though I rather believe no C nor C++ dlls are needed.
+
 == 3.3.0-# ==
 Sorry for the version numbering mixup. The 3.3.0 downloads are 3.0.0, of course.
 Corrected since 3.0.0-3.
